--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 			<br>
 
 			<div>
-				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Find a Freind</h4></button></a>
+				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Find a Friend</h4></button></a>
 				<hr>
 				<p><a href="/api/answer">API Friends List</a> | <a href="https://github.com/davedkmt/Friend-Finder">GitHub Repo</a></p>
 			</div>
